@@ -1,3 +1,15 @@
+2007-02-16  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: dbd/mysql.scm
+	  So now dbi-execute-using-connection fits behavior
+	  of mysql-store-result.
+
+	* Change: dbd_mysqllib.stub
+	  Now mysql-store-result return <mysql-res> instance after
+	  mysql-real-query "SELECT type" query, and #f after
+	  mysql-real-query "Other type" query(INSERT/UPDATE and so on),
+	  and raise <mysql-error> if any error occurred.
+
 2007-02-15  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: dbd/mysql.scm
